--- a/data_preprocessing/python/data_preprocessing_tools.ipynb
+++ b/data_preprocessing/python/data_preprocessing_tools.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "55bd4236-74f4-42b3-9588-a919c12f18fd",
    "metadata": {},
    "outputs": [],
@@ -30,56 +30,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cccfc85d-0142-4432-9f09-09a2df90eb5c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([['France', 44.0, 72000.0],\n",
-       "        ['Spain', 27.0, 48000.0],\n",
-       "        ['Germany', 30.0, 54000.0],\n",
-       "        ['Spain', 38.0, 61000.0],\n",
-       "        ['Germany', 40.0, nan],\n",
-       "        ['France', 35.0, 58000.0],\n",
-       "        ['Spain', nan, 52000.0],\n",
-       "        ['France', 48.0, 79000.0],\n",
-       "        ['Germany', 50.0, 83000.0],\n",
-       "        ['France', 37.0, 67000.0]], dtype=object),\n",
-       " array([['No'],\n",
-       "        ['Yes'],\n",
-       "        ['No'],\n",
-       "        ['No'],\n",
-       "        ['Yes'],\n",
-       "        ['Yes'],\n",
-       "        ['No'],\n",
-       "        ['Yes'],\n",
-       "        ['No'],\n",
-       "        ['Yes']], dtype=object))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = pd.read_csv('../Data.csv')\n",
     "\n",
     "# matrix of feauters\n",
     "X = dataset.iloc[:, :-1].values\n",
     "# dependent variable vector\n",
-    "Y = dataset.iloc[:, -1:].values\n",
-    "\n",
-    "X, Y"
+    "Y = dataset.iloc[:, -1:].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b304f438-520c-43a8-9fd9-3d1927fb9fc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 nan]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' nan 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d718116c-f76b-494e-9c12-5503e4f28afb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['No']\n",
+      " ['Yes']\n",
+      " ['No']\n",
+      " ['No']\n",
+      " ['Yes']\n",
+      " ['Yes']\n",
+      " ['No']\n",
+      " ['Yes']\n",
+      " ['No']\n",
+      " ['Yes']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "c8593004-eb3a-4f2a-8aa5-12b9fffddcca",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -87,10 +108,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "798cb325-21a7-4a11-a35c-8ccfb5ea8619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "imputer.fit(X[:, 1:3])\n",
+    "X[:, 1:3] = imputer.transform(X[:, 1:3])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a334bb8a-9c2e-4500-8256-0838c0e43370",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -103,6 +137,38 @@
    "metadata": {},
    "source": [
     "#### Encoding the Independent Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9c2c08ee-9612-4ed5-b973-e054ceef9ca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0 0.0 1.0 0.0 1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 1.0 0.0 1.0 0.0 0.0 1.0 27.0 48000.0]\n",
+      " [0.0 1.0 0.0 1.0 0.0 1.0 0.0 30.0 54000.0]\n",
+      " [0.0 1.0 0.0 1.0 0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 1.0 0.0 1.0 0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 1.0 0.0 1.0 0.0 0.0 35.0 58000.0]\n",
+      " [0.0 1.0 0.0 1.0 0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [1.0 0.0 1.0 0.0 1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 1.0 0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 1.0 0.0 1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough')\n",
+    "X = np.array(ct.fit_transform(X))\n",
+    "print(X)\n"
    ]
   },
   {
