--- a/data_preprocessing/python/data_preprocessing_tools.ipynb
+++ b/data_preprocessing/python/data_preprocessing_tools.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "55bd4236-74f4-42b3-9588-a919c12f18fd",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cccfc85d-0142-4432-9f09-09a2df90eb5c",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b304f438-520c-43a8-9fd9-3d1927fb9fc5",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d718116c-f76b-494e-9c12-5503e4f28afb",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "print(Y)"
+    "print(Y)\n"
    ]
   },
   {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "798cb325-21a7-4a11-a35c-8ccfb5ea8619",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "9c2c08ee-9612-4ed5-b973-e054ceef9ca3",
    "metadata": {},
    "outputs": [
@@ -149,16 +149,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.0 0.0 1.0 0.0 1.0 0.0 0.0 44.0 72000.0]\n",
-      " [0.0 1.0 0.0 1.0 0.0 0.0 1.0 27.0 48000.0]\n",
-      " [0.0 1.0 0.0 1.0 0.0 1.0 0.0 30.0 54000.0]\n",
-      " [0.0 1.0 0.0 1.0 0.0 0.0 1.0 38.0 61000.0]\n",
-      " [0.0 1.0 0.0 1.0 0.0 1.0 0.0 40.0 63777.77777777778]\n",
-      " [1.0 0.0 1.0 0.0 1.0 0.0 0.0 35.0 58000.0]\n",
-      " [0.0 1.0 0.0 1.0 0.0 0.0 1.0 38.77777777777778 52000.0]\n",
-      " [1.0 0.0 1.0 0.0 1.0 0.0 0.0 48.0 79000.0]\n",
-      " [0.0 1.0 0.0 1.0 0.0 1.0 0.0 50.0 83000.0]\n",
-      " [1.0 0.0 1.0 0.0 1.0 0.0 0.0 37.0 67000.0]]\n"
+      "[[1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 0.0 1.0 27.0 48000.0]\n",
+      " [0.0 1.0 0.0 30.0 54000.0]\n",
+      " [0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 0.0 35.0 58000.0]\n",
+      " [0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
      ]
     }
    ],
@@ -180,11 +180,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "27f5a387-9a07-422b-8494-d3ab4643ba88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "Y = le.fit_transform(Y.squeeze())\n",
+    "print(Y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "011d2003-38ef-41d3-8270-51c517ce0250",
    "metadata": {},
    "source": [
     "### Splitting the dataset into the Training Set and Test Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cc2147f3-44b8-4439-966b-a1c9e7b7786b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a5d5fd9f-4782-409a-a850-cdfb6a87c7d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 0.0 1.0 27.0 48000.0]\n",
+      " [1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 0.0 35.0 58000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9affabf9-23d2-49c7-8e36-d7901b5156fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 1.0 0.0 30.0 54000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "55dadf1f-2212-480f-b5b2-0d51a974078d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "17c1dacd-9067-48f9-aa68-8456a9ca91bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y_test)"
    ]
   },
   {
