--- a/data_preprocessing/python/data_preprocessing_tools.ipynb
+++ b/data_preprocessing/python/data_preprocessing_tools.ipynb
@@ -5,12 +5,12 @@
    "id": "df53d404-6daa-490b-808e-b6cfb2d53783",
    "metadata": {},
    "source": [
-    "## Data Preprocessing Tools"
+    "## Data Preprocessing Templage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "55bd4236-74f4-42b3-9588-a919c12f18fd",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "cccfc85d-0142-4432-9f09-09a2df90eb5c",
    "metadata": {},
    "outputs": [],
@@ -44,163 +44,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b304f438-520c-43a8-9fd9-3d1927fb9fc5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['France' 44.0 72000.0]\n",
-      " ['Spain' 27.0 48000.0]\n",
-      " ['Germany' 30.0 54000.0]\n",
-      " ['Spain' 38.0 61000.0]\n",
-      " ['Germany' 40.0 nan]\n",
-      " ['France' 35.0 58000.0]\n",
-      " ['Spain' nan 52000.0]\n",
-      " ['France' 48.0 79000.0]\n",
-      " ['Germany' 50.0 83000.0]\n",
-      " ['France' 37.0 67000.0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "d718116c-f76b-494e-9c12-5503e4f28afb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['No']\n",
-      " ['Yes']\n",
-      " ['No']\n",
-      " ['No']\n",
-      " ['Yes']\n",
-      " ['Yes']\n",
-      " ['No']\n",
-      " ['Yes']\n",
-      " ['No']\n",
-      " ['Yes']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Y)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c8593004-eb3a-4f2a-8aa5-12b9fffddcca",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Taking care of missing data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "798cb325-21a7-4a11-a35c-8ccfb5ea8619",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.impute import SimpleImputer\n",
-    "\n",
-    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
-    "imputer.fit(X[:, 1:3])\n",
-    "X[:, 1:3] = imputer.transform(X[:, 1:3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a334bb8a-9c2e-4500-8256-0838c0e43370",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Encoding ctegorical data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48324edc-a8e9-4437-bced-1c30fa9fd655",
-   "metadata": {},
-   "source": [
-    "#### Encoding the Independent Variable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "9c2c08ee-9612-4ed5-b973-e054ceef9ca3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.0 0.0 0.0 44.0 72000.0]\n",
-      " [0.0 0.0 1.0 27.0 48000.0]\n",
-      " [0.0 1.0 0.0 30.0 54000.0]\n",
-      " [0.0 0.0 1.0 38.0 61000.0]\n",
-      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
-      " [1.0 0.0 0.0 35.0 58000.0]\n",
-      " [0.0 0.0 1.0 38.77777777777778 52000.0]\n",
-      " [1.0 0.0 0.0 48.0 79000.0]\n",
-      " [0.0 1.0 0.0 50.0 83000.0]\n",
-      " [1.0 0.0 0.0 37.0 67000.0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough')\n",
-    "X = np.array(ct.fit_transform(X))\n",
-    "print(X)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0ab928a-0f60-45a1-8350-fa023bad4dae",
-   "metadata": {},
-   "source": [
-    "#### Endocding the Dependent Variable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "27f5a387-9a07-422b-8494-d3ab4643ba88",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 0 0 1 1 0 1 0 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "le = LabelEncoder()\n",
-    "Y = le.fit_transform(Y.squeeze())\n",
-    "print(Y)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "011d2003-38ef-41d3-8270-51c517ce0250",
    "metadata": {},
@@ -210,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "cc2147f3-44b8-4439-966b-a1c9e7b7786b",
    "metadata": {},
    "outputs": [],
@@ -219,105 +62,6 @@
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "a5d5fd9f-4782-409a-a850-cdfb6a87c7d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.0 0.0 1.0 38.77777777777778 52000.0]\n",
-      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
-      " [1.0 0.0 0.0 44.0 72000.0]\n",
-      " [0.0 0.0 1.0 38.0 61000.0]\n",
-      " [0.0 0.0 1.0 27.0 48000.0]\n",
-      " [1.0 0.0 0.0 48.0 79000.0]\n",
-      " [0.0 1.0 0.0 50.0 83000.0]\n",
-      " [1.0 0.0 0.0 35.0 58000.0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "9affabf9-23d2-49c7-8e36-d7901b5156fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.0 1.0 0.0 30.0 54000.0]\n",
-      " [1.0 0.0 0.0 37.0 67000.0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "55dadf1f-2212-480f-b5b2-0d51a974078d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 0 0 1 1 0 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "17c1dacd-9067-48f9-aa68-8456a9ca91bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Y_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dcd3427e-1e2a-479f-a961-f8bb2a03e368",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "### Feauture Scaling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b84a5ba-98f5-486f-a481-a0908b5d7afa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
