multiple linear regression

--- a/regression/python/multiple_linear_regression.ipynb
+++ b/regression/python/multiple_linear_regression.ipynb
@@ -131,8 +131,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "63c2b3b8-28d7-40a1-99e8-2fc04aeb59ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[103015.2  103282.38]\n",
+      " [132582.28 144259.4 ]\n",
+      " [132447.74 146121.95]\n",
+      " [ 71976.1   77798.83]\n",
+      " [178537.48 191050.39]\n",
+      " [116161.24 105008.31]\n",
+      " [ 67851.69  81229.06]\n",
+      " [ 98791.73  97483.56]\n",
+      " [113969.44 110352.25]\n",
+      " [167921.07 166187.94]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = regressor.predict(X_test)\n",
+    "\n",
+    "np.set_printoptions(precision=2)\n",
+    "print(np.concatenate((y_pred.reshape(len(y_pred), 1), y_test.reshape(len(y_test), 1)), axis=1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536e7258-25a0-479e-8202-25235723cd38",
    "metadata": {},
    "outputs": [],
    "source": []
